--- a/assingnments/assignment 3.html/index.css
+++ b/assingnments/assignment 3.html/index.css
@@ -1,7 +1,9 @@
 header{
 display: flex;
 justify-content: space-between;
-background-color: beige;
+background-color: white;
+padding: 60px;
+
 
 }
 .icons{
@@ -72,6 +74,7 @@ padding: 10px 20px;
 width: 300px;
 height: 40px;
 margin-top: 20px;
+margin-right: 20px;
 
 
 
@@ -80,12 +83,24 @@ margin-top: 20px;
 .search li {
  display: flex;
  background-color: rgb(78, 149, 37);
+background-position: 20px;
  border-radius: 50%;
- height: 40px;
+ height: 45px;
  justify-content: center;
- width: 40px;
+ width: 45px;
  align-items: center;
 display: inline;
+margin-right: 60px;
+margin-top: 15px;
+position: absolute;
+line-height: 1;
+left: 270px; ; 
+transform: translateY(-50);
+width: 30px;
+height: 30px;
+top: 10px; 
+font-size: 1px;
+border: 2px;
 
 }
 
@@ -97,6 +112,74 @@ box-sizing: border-box;
 
  .search {
     display: flex;
+    position: relative;
+
  }
 
 
+
+body{
+margin: 0%;
+padding: 20px ; 
+
+
+}
+.search a {
+color: white;
+font-size: 20px;
+margin-bottom: 15px;
+margin-right: 30px;
+line-height: 1;
+
+}
+nav li {
+
+
+justify-content: center;
+gap: 10px;
+list-style: none;
+margin: 0%;
+padding:0%
+
+
+
+}
+nav{
+    background-color: rgb(78, 149, 37);
+    padding: 25px 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+ justify-content: center;
+align-items: center;
+gap: 10px;
+
+}
+
+nav li a {
+text-decoration: none;
+color: white;
+font-size: 14px;
+font-weight: 600;
+letter-spacing: 0.5px;
+padding: 10px 15px;
+text-transform: uppercase;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+
+}
+ .hero button{
+
+border: radius 50%; ;
+text-decoration: none;
+padding: 10px;
+background-color: forestgreen;
+color:white ;
+ }
+.hero{
+ font-family: "Helvetica Neue", Helvetica, sans-serif;
+}
+nav li   :hover {
+
+color: yellow;
+}
